--- a/08Intents/app/src/main/res/layout/activity_main.xml
+++ b/08Intents/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context="com.example.kienpt.a08intents.MainActivity"
-    android:gravity="center">
+    tools:context="com.example.kienpt.a08intents.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,10 +15,17 @@
         android:textSize="30sp" />
 
     <Button
-        android:id="@+id/btnGoTo2"
+        android:id="@+id/btn_goTo2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/go_to_activity_2" />
+
+    <Button
+        android:id="@+id/btn_goTo3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="@string/go_to_activity_3" />
 
 </LinearLayout>
