--- a/08Intents/app/src/main/res/layout/activity_second.xml
+++ b/08Intents/app/src/main/res/layout/activity_second.xml
@@ -23,7 +23,7 @@
         android:textSize="15sp"/>
 
     <Button
-        android:id="@+id/btnGoTo1"
+        android:id="@+id/btn_goTo1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/go_to_activity_1"
