--- a/11.NetworkPrograming/app/src/main/res/layout/activity_main.xml
+++ b/11.NetworkPrograming/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,9 @@
 
     <TextView
         android:id="@+id/tv_result"
+        android:textSize="20sp"
+        android:padding="5dp"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
